subida de las animaciones y transiciones

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>MANIFESTOR - Sitio Oficial</title>
 	<link rel="icon" href="images/iso-manifestor.png">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/animate.css">
 </head>
 <body class="body__fondo">
     <div class="index-container">
@@ -42,37 +43,37 @@
             <a href="">
             <img class="header__social" src="images/mundo.png" alt="">
             </a>
-            <a href="registro-de-usuario.html"target="_blank"><img class="register__logo" src="images/register.png" alt=""></a>    
+            <a href="registro-de-usuario.html"target="_blank"><img class="header__social" src="images/register.png" alt=""></a>    
 
             <a href=""><img class="header__social" src="images/compra.png" alt=""></a>
             </div>    
     </header>
     <main class="fondo__main">
 
-    <video class="videoclass1" src="videos/modavintagemanifestor.mp4" controls muted autoplay></video> 	
+    <video class="videoclass1" src="videos/modavintagemanifestor.mp4" muted autoplay></video> 	
     <section class="center1">
-    	    <article class="categoria">
+    	    <article class="categoria wow fadeIn">
         		<a href="pages/newcolection.html">
                     <img class="imagen__clas1" src="images/newcolection3.jpg" alt="">
                 </a>
         		<h2>NEW COLECTION</h2>
     	    </article>
     	    
-    	    <article class="categoria">
+    	    <article class="categoria wow fadeIn">
         	    <a href="pages/winter22.html">
                     <img class="imagen__clas1" src="images/inv22.jpeg" alt="">
                 </a>
         		<h2>INV 22</h2>
     	    </article>
 
-    	    <article class="categoria">
+    	    <article class="categoria wow fadeIn">
         	    <a href="pages/newarrivals.html">
                     <img class="imagen__clas1" src="images/newarrivals1.jpg" alt="">
                 </a>
         		<h2>NEW ARRIVALS</h2>
     	    </article>
 
-    	    <article class="categoria">
+    	    <article class="categoria wow fadeIn">
         	    <a href="pages/summer.html">
                     <img class="imagen__clas1" src="images/summer1.jpeg" alt="">
                 </a>
@@ -129,5 +130,7 @@
     <p class="footer__info">&reg MANIFESTOR SINCE 2022-TODOS LOS DERECHOS RESERVADOS</p>
     </footer>
     </div>
+    <script src="scripts/wow.min.js"></script>
+    <script>new WOW().init();</script>
 </body>
 </html>
